flatten: support for exclude patterns